Some styling changes

--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,12 +1,12 @@
 <header>
     <div class="logo-container">
         <img src="/images/weather.png" alt="Logo" >
-        <h1 class="company-name">{{Title}}</h1>
+        <h1 class="company-name">Local Weather</h1>
     </div>
     <div>
         <a href="/">Weather</a>
         <a href="/about">About</a>
-        <a href="/help">help</a>
+        <a href="/help">Help</a>
     </div>
 </header>
    
