--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,7 +31,8 @@ header {
 
  body {
      color:#333333;
-     font-family: sans-serif;
+     font-style: oblique;
+     font-family: cursive;
      max-width: 750px;
      margin: 0 auto;
      padding: 0 16px;
@@ -70,6 +71,11 @@ header {
      padding: 1rem;
  }
 
+ main img {
+     display: flex;
+     align-items: center;
+ }
+
  header a:hover {
     color: #000000;
     font-weight: 700;
@@ -86,6 +92,7 @@ header {
      border: 1px solid var(--primary);
      padding: 1rem;
      width: 75%;
+     font-style: oblique;
  }
 
  button {
@@ -96,6 +103,7 @@ header {
      color: #fff;
      float: right;
      width: 20%;
+     font-style: oblique;
  }
 
  .logo-container {
@@ -108,4 +116,19 @@ header {
  .company-name {
     font-size: 42px;
     color: var(--primary);
+ }
+
+ .weather-data-container {
+    display: flex;
+    margin-top: 2rem;
+ }
+
+ #weather-image {
+     margin-right: 1rem;;
+ }
+
+ #location {
+    font-style: oblique;
+    font-family: cursive;
+    color: #633e76;
  }
