--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -19,9 +19,16 @@
                 <input placeholder="Enter location" id="address">
                 <button type="submit"> Get Weather </button>
             </form>
+
+            <div class="weather-data-container">
+                <img src="" alt="" id="weather-image">
+                <div>
+                    <p id="error"></p>
+                    <p id="location"></p>
+                </div>
+            </div>
             
-            <p id="error"></p>
-            <p id="location"></p>
+            
         </main>
 
     </div>
