updated about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -14,7 +14,7 @@
     <div class="main-content">
         {{>header}}
         <main>
-            <h2>Robo Dance...</h2>
+            <h2>This site was created by Maniak, this site uses data from Weatherstack and mapbox. </h2>
             <img class="portrait" src="/images/robot.png" alt="My Image">
         </main>
     </div>
