updated forecast string

--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -12,7 +12,7 @@
     <div class="main-content">
      {{>header}}
     <main>
-        <h2>Help</h2>
+        <h2>Our API covers global weather data across the board — from a multi-year history all the way to live information and accurate weather forecasts.</h2>
     </main>
     </div>
     
