--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -15,7 +15,7 @@
         <main>
             <h4> {{Message}} </h4>
 
-            <form>
+            <form class="parent-form">
                 <input placeholder="Enter location" id="address">
                 <button type="submit"> Get Weather </button>
             </form>
