--- a/templates/views/notfound.hbs
+++ b/templates/views/notfound.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 not found</title>
+    <title>Local Weather - 404 not found</title>
     <link rel="icon" href="/images/weather.png">
      <link rel="stylesheet" href="/css/styles.css">
     <script src="/js/app.js"></script>
